# sic_crystal

./: SiC_Crystal.sln  contributors.txt
SiC_Crystal/: CMakeLists.txt  CURRENT.xyz  POSITIONS.xyz  SiC_Crystal.vcxproj  SiC_Crystal.vcxproj.filters  crystal.cpp  crystal.h  main.cpp  main_mpi.cpp
SiC_Crystal/x64/Debug/: vc120.idb
SiC_Crystal/x64/Debug/SiC_Crystal.tlog/: CL.read.1.tlog  CL.write.1.tlog  SiC_Crystal.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SiC_Crystal/x64/Release/SiC_Crystal.tlog/: CL.read.1.tlog  CL.write.1.tlog  SiC_Crystal.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: CURRENT_New.xyz
