cmake_minimum_required (VERSION 2.8.11)
cmake_policy(SET CMP0004 OLD)
project (sic_crystal)
find_package(MPI)
find_package(OpenMP)

include_directories (Eigen ${CMAKE_CURRENT_SOURCE_DIR})
include_directories (flann/src/cpp ${CMAKE_CURRENT_SOURCE_DIR})
link_directories (flann/build/lib ${CMAKE_CURRENT_SOURCE_DIR})

if(OPENMP_FOUND)
	add_definitions(${OpenMP_CXX_FLAGS})
endif()
add_definitions(-Dnullptr=0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

if(MPI_CXX_FOUND)
	add_definitions(-DENABLE_MPI)
	add_executable (sic_crystal main_mpi.cpp crystal.cpp)
	include_directories (${MPI_CXX_INCLUDE_PATH})
	add_definitions(${MPI_CXX_COMPILE_FLAGS} ${MPI_CXX_LINK_FLAGS})
	target_link_libraries (sic_crystal ${MPI_CXX_LIBRARIES} -lflann_cpp)
else()
	add_executable (sic_crystal main.cpp crystal.cpp)
	target_link_libraries (sic_crystal -lflann_cpp)
endif()

